--- a/front-end/index.html
+++ b/front-end/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>home</title>
 </head>
 <body>
-<script>
-	window.location.href = './build/index.html';
-</script>
+<div id="app">
+	<!-- <h1>Hello App!</h1>
+	<p>
+		<router-link to="/">Go to foo</router-link>
+		<router-link to="/bar">Go to bar</router-link>
+	</p> -->
+	<!-- <router-view></router-view> -->
+</div>
+<script src="./build/main.js"></script>
 </body>
 </html>
