--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 <div id="app">
-	<!-- <h1>Hello App!</h1>
+	<h1>Hello App!</h1>
+	<!-- <audio src="http://7xstax.com1.z0.glb.clouddn.com/in-the-autumn-sky.mp3" autoplay="" controls=""></audio> -->
 	<p>
 		<router-link to="/">Go to foo</router-link>
 		<router-link to="/bar">Go to bar</router-link>
-	</p> -->
-	<!-- <router-view></router-view> -->
+	</p>
+	<router-view></router-view>
 </div>
 <script src="./build/main.js"></script>
 </body>
