--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,6 +7,7 @@
 <body>
 <div id="app">
 	<h1>Hello App!</h1>
+	<a href="./views/frame.html#/home">前往首页</a>
 	<!-- <audio src="http://7xstax.com1.z0.glb.clouddn.com/in-the-autumn-sky.mp3" autoplay="" controls=""></audio> -->
 	<p>
 		<router-link to="/">Go to foo</router-link>
