--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <div id="app">
-	<h1>Hello App!</h1>
-	<a href="./views/frame.html#/home">前往首页</a>
+	<!-- <h1>Hello App!</h1> -->
+	<!-- <a href="./views/frame.html#/home">前往首页</a> -->
 	<!-- <audio src="http://7xstax.com1.z0.glb.clouddn.com/in-the-autumn-sky.mp3" autoplay="" controls=""></audio> -->
-	<p>
-		<router-link to="/">Go to foo</router-link>
-		<router-link to="/bar">Go to bar</router-link>
-	</p>
+	<!-- <p> -->
+		<!-- <router-link to="/">Go to foo</router-link> -->
+		<!-- <router-link to="/bar">Go to bar</router-link> -->
+	<!-- </p> -->
 	<router-view></router-view>
 </div>
 <script src="./build/main.js"></script>
